--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ h6 {
 #header .profile img {
   display: block;
   width: 120px;
+  height: 120px;
   margin: 15px auto;
   border: 8px solid #2c2f3f;
   border-radius: 50%;
@@ -229,7 +230,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url(../img/hero-bg.jpg);
+  background-image: url(../img/eamin2.JPG);
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -251,11 +253,11 @@ h6 {
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 15px 0;
   font-size: 64;
   font-weight: 600;
   line-height: 56px;
-  color: #fff;
+  color: #fff6fa;
 }
 
 #hero p {
@@ -269,7 +271,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #dd1454;
 }
 
 @media (min-width: 1024px) {
